@@ -4,6 +4,15 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.18-32 (opened May 30, 2011)
 
+	* anova.prc: new function that casts prc() result to a
+	corresponding rda() and submits this to anova.cca(). With this is
+	it is possible to analyse anova(..., by = "axis"). Other cases are
+	possible as well, but not very useful as "margin" and "term" only
+	analyse all constraints as a single matrix. Now some functions
+	that were made refuse prc() results in 1.18-30 work again, and
+	anova.ccabyaxis() even makes sense. This fixes a problem Jae
+	Pasari raised in his email.
+
 	* vegdist docs: Brian Inouye informed us that we are not
 	calculating the Raup-Crick index like originally suggested: we use
 	equal probabilities for all species, but the species probabilities
